# xpylib

./: .coveragec  .gitignore  README.md  local-ci.sh  pre-shippping.sh  pyproject.toml
docs/: conf.py  index.rst
docs/_static/: custom.css
docs/api/: cli.clihdr.rst  cli.rst  config.confmgr.rst  config.rst  fio.jsonhdr.rst  fio.jsonmgr.rst  fio.rst  fs.fsmgr.rst  fs.rst  metric.observer.rst  metric.rst  modules.rst  typehdr.jsonhdr.rst  typehdr.listhdr.rst  typehdr.rst  typehdr.strhdr.rst
src/cli/: __init__.py  clihdr.py
src/config/: confmgr.py
src/fio/: __init__.py  jsonhdr.py  jsonmgr.py
src/fs/: __init__.py  fsmgr.py
src/metric/: __init__.py  observer.py
src/typehdr/: __init__.py  jsonhdr.py  listhdr.py  strhdr.py
tests/: test_clihdr.py  test_confmgr.py  test_fsmgr.py  test_jsonhdr.py  test_jsonmgr.py  test_listhdr.py  test_observer.py  test_strhdr.py
tests/rc/: decoy.json
